fix: Align to center on interval choice button

--- a/react/src/stylesheets/all.scss
+++ b/react/src/stylesheets/all.scss
@@ -73,7 +73,7 @@ nav a {
 }
 // http://stackoverflow.com/questions/10813528/is-it-possible-to-center-text-in-select-box
 .toolbar select {
-  text-indent: 12px;
+  text-indent: 8%;
 }
 
 time {
